ms: extended funtualaty for starting unigridd with testnet and start hedgehog